objects/SPM_AccountProgram_Region__c.object
<CustomObject>
    <fields>
        <fullName>AccountProgram_ID__c</fullName>
        <description>Program</description>
        <inlineHelpText>Program</inlineHelpText>
        <label>AccountProgram ID</label>
        <referenceTo>SPM_Account_Program__c</referenceTo>
        <relationshipName>AccounttProgram_Region</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <formula>Region_ID__r.Actual_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regions</description>
        <inlineHelpText>Regions</inlineHelpText>
        <label>Region ID</label>
        <referenceTo>SPM_Account_Regions__c</referenceTo>
        <relationshipLabel>Program Region Coverage</relationshipLabel>
        <relationshipName>AccounttProgram_Region</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Owner__c</fullName>
        <formula>Region_ID__r.Region_Owner__r.LastName &amp; &quot;, &quot; &amp; Region_ID__r.Region_Owner__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <formula>Region_ID__r.SPM_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <formula>Region_ID__r.SBI_Score_Last_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBI Score - Last Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>